replace images for webp

--- a/_posts/2026-01-08-repo-pwa.md
+++ b/_posts/2026-01-08-repo-pwa.md
@@ -22,14 +22,14 @@ La instalación es simple, solo debes presionar el botón de <b>Instalar</b> o e
 
   <div class="img-frame">
     <img
-      src="{{ '/assets/images/repopwa/instalar_metodo_1.png' | relative_url }}"
+      src="{{ '/assets/images/repopwa/instalar_metodo_1.webp' | relative_url }}"
       alt="Instalar con boton">
     <span>FIG 01 · Instalar con boton</span>
   </div>
 
   <div class="img-frame">
     <img
-      src="{{ '/assets/images/repopwa/instalar_metodo_2.png' | relative_url }}"
+      src="{{ '/assets/images/repopwa/instalar_metodo_2.webp' | relative_url }}"
       alt="Instalar desde opciones">
     <span>FIG 02 · Instalar desde opciones</span>
   </div>
