--- a/_posts/2026-01-08-repo-pwa.md
+++ b/_posts/2026-01-08-repo-pwa.md
@@ -14,7 +14,7 @@ Algunas veces quise compartir aplicaciones pero no quiero tener que publicarlas 
 Es verdad, existen algunas limitaciones, pero quiero hacer cositas funcionales, nada complejo o dependiente de servicios. Al menos no para proyectos que hago de chill.
 
 No doy más vueltas. Aquí puedes ver el índice de las apps  
-><a href="https://jromano743.github.io/repo-pwa/">Ver web</a>
+> <a href="https://jromano743.github.io/repo-pwa/" target="_blank">Ver web</a>
 
 <h4>Instalación</h4>
 La instalación es simple, solo debes presionar el botón de <b>Instalar</b> o en su defecto ir a <b>Opciones → Añadir Aplicación</b>.
